<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:id="@+id/img_photo"
            tools:src="@color/colorAccent"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"/>
        <TextView
            style="@style/TextContent.Black"
            android:id="@+id/judul_food"
            android:textSize="20sp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="8dp"/>
        <TextView
            style="@style/TextContent"
            android:id="@+id/deskripsi"
            android:text="@string/deskripsi_food"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:lineSpacingMultiplier="1"/>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">
                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/bahan"/>
                <TextView
                    android:id="@+id/bahan_tv"
                    style="@style/TextSpec.Value"
                    android:text="@string/bahan_tv"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/make"/>
                <TextView
                    android:id="@+id/make_tv"
                    style="@style/TextSpec.Value"
                    android:text="@string/make_tv"
                    />
            </TableRow>
        </TableLayout>
        <TextView
            style="@style/TextContent"
            android:id="@+id/price"
            android:text="@string/price"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:lineSpacingMultiplier="1"/>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">
                <TextView
                    android:id="@+id/price_tv"
                    style="@style/Price"
                    android:text="@string/price_tv"/>
            </TableRow>
        </TableLayout>

    </LinearLayout>

</ScrollView>